2009-11-19  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Check for empty module/agent when processing
	  module data.

2009-11-13  Ramon Novoa  <rnovoa@artica.es>

	* conf/pandora_server.conf: Updated configuration tokens.

	* lib/PandoraFMS/SNMPServer.pm, lib/PandoraFMS/Config.pm,
	  lib/PandoraFMS/PluginServer.pm, lib/PandoraFMS/PredictionServer.pm,
	  lib/PandoraFMS/Core.pm, lib/PandoraFMS/ReconServer.pm,
	  lib/PandoraFMS/DataServer.pm, lib/PandoraFMS/NetworkServer.pm,
	  lib/PandoraFMS/Tools.pm, lib/PandoraFMS/WMIServer.pm,
	  bin/pandora_server: Standardized and improved logging.

2009-11-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/Core.pm: Fixed forced alert execution. Substitute alert
	  macros after decoding HTML entities.

2009-11-10  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/PredictionServer.pm: Fixed bug #2894950.
	
	* lib/PandoraFMS/DataServer.pm: Fixed bug #2894737.

2009-11-08  Sancho Lerena <slerena@artica.es>

	* util/pandora_checkdep.pl: Deleted old dep checker, not used anymore.
	
	* pandora_server_upgrade: Several fixes, adding logrotate conf and more
	link, permissions and startup scripts stuff fixed.
	
	* DEBIAN/control: Updated to RC2, deleted old deps not used anymore.
	
	* DEBIAN/postinst: Simplified some stuff who don't work nice (startup 
	script links, logrotate missing and pandora user doesn't exist. Also problems
	with permissions with tentacle_server.
	
	* DEBIAN/prerm: Simplified, fixed problems deleting startup links.
	
	* DEBIAN/conffiles: Was not working and causes pandora_server.conf to do
	not exist in target systems. Removing it works nice.
	
	DEBian packages works 100%, tested on latest Debian Stable from scratch.
	
2009-11-07  Sancho Lerena <slerena@artica.es>

	* pandora_server_installer: A few bunch of upgrades for SUSE, added
	logrotate.d and some minor fixes.

	* pandora_server_upgrade: Some minor fixes.

	* PandoraFMS/Tools.pm: Fixes to internal SMTP Auth mechanism. 
